--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,18 @@
+@import url('https://rsms.me/inter/inter.css');
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 body, html {
-    padding: 0;
-    margin: 0;
-    background: rgb(252, 252, 252)
+    padding: none;
+    margin: none;
+    background: rgb(252, 252, 252);
+    font-family: 'Inter', sans-serif;
+}
+
+.title {
+    font-size: 400%;
+    text-align: center;
+    font-weight: 400;
+
 }
