--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,22 @@ body, html {
     margin: none;
     background: rgb(252, 252, 252);
     font-family: 'Inter', sans-serif;
+    color: rgb(14, 14, 14);
 }
 
 .title {
     font-size: 400%;
     text-align: center;
     font-weight: 400;
+    cursor: default;
+}
 
+::-moz-selection { /* Code for Firefox */
+  color: rgb(250, 250, 250);
+  background: rgb(14, 14, 14);
+}
+
+::selection {
+  color: rgb(250, 250, 250);
+  background: rgb(14, 14, 14);
 }
