--- a/css/snackbar.css
+++ b/css/snackbar.css
@@ -12,6 +12,26 @@
   right: 2%;
   bottom: 30px;
   border-radius: 10px;
+  font-size: 75%;
+}
+
+@media screen and (max-width: 992px) {
+  #snackbar {
+  visibility: hidden; 
+  max-width: 30%; 
+ 
+  background-color: rgb(37, 37, 37); 
+  color: rgb(255, 255, 255); 
+  text-align: right; 
+  border-radius: 2px; 
+  padding: 9px; 
+  position: fixed; 
+  z-index: 1; 
+  right: 2%;
+  bottom: 30px;
+  border-radius: 10px;
+  font-size: 60%;
+}
 }
 
 
